Fix App/Windowuse/Viewuse height and scrollbars
Set Windowuse 'content' element to fit in screen.
Scrollbars on Windowuse, not on App.

--- a/tracuse_project/assets/styles/app/base_app.css
+++ b/tracuse_project/assets/styles/app/base_app.css
@@ -29,6 +29,7 @@ footer {
     width: 100%;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 #viewuses {
